[package]
authors = ["Jack Grigg <str4d@i2pmail.org>"]
description = "BLS signatures"
documentation = "https://github.com/str4d/bls"
homepage = "https://github.com/str4d/bls"
license = "MIT/Apache-2.0"
name = "bls"
repository = "https://github.com/str4d/bls"
version = "0.0.1"

[dependencies]
rand = { version = "0.4", default-features = false }
pairing = { git = "https://github.com/sorpaas/pairing", default-features = false }

[features]
std = [
	"pairing/std",
]
default = ["std"]
